TANDEM System Manager/Service Catalogue/documentation/k8-deployment/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/service_catalogue: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: postgres
            - name: DB_DATABASE
              value: keycloak
            - name: DB_PASSWORD
              value: password
            - name: DB_SCHEMA
              value: public
            - name: DB_USER
              value: keycloak
            - name: DB_VENDOR
              value: POSTGRES
            - name: KEYCLOAK_PASSWORD
              value: Pa55w0rd
            - name: KEYCLOAK_USER
              value: admin
          image: quay.io/keycloak/keycloak:legacy
          name: keycloak
          ports:
            - containerPort: 8443
            - containerPort: 8180
          resources: {}
      restartPolicy: Always
status: {}
