TANDEM System Manager/Service Catalogue/documentation/k8-deployment/service-catalogue-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: service-catalogue-mongo
  name: service-catalogue-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: service-catalogue-mongo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/service_catalogue: "true"
        io.kompose.service: service-catalogue-mongo
    spec:
      containers:
        - image: mongo:latest
          name: service-catalogue-mongo
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
