TANDEM System Manager/Service Catalogue/documentation/k8-deployment/service-catalogue-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: service-catalogue-mongo
  name: service-catalogue-mongo
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: service-catalogue-mongo
status:
  loadBalancer: {}
