TANDEM System Manager/Service Catalogue/documentation/k8-deployment/service-catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: service-catalogue
  name: service-catalogue
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 31880
  selector:
    io.kompose.service: service-catalogue
status:
  loadBalancer: {}
