TANDEM System Manager/Service Catalogue/documentation/k8-deployment/service-catalogue-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: service-catalogue
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/service-catalogue: "true"
  podSelector:
    matchLabels:
      io.kompose.network/service-catalogue: "true"
